# CMake File taken from GoogleTest documentation
# This is an example only
cmake_minimum_required(VERSION 3.14)
project(sample)

# GoogleTest requires at least C++17
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

enable_testing()

# Test executable
add_executable(
  test_factorial
  factorial.cc
  test_factorial.cc
)

# How to include header factorial.h
target_include_directories(test_factorial PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

target_link_libraries(
  test_factorial
  GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(test_factorial)
